[tool.poetry]
name = "riskoptima"
version = "2.5.1"
description = "RiskOptima is a powerful Python toolkit for financial risk analysis, portfolio optimization, and advanced quantitative modeling. It integrates state-of-the-art methodologies, including Monte Carlo simulations, Value at Risk (VaR), Conditional VaR (CVaR), Black-Scholes, Heston, and Merton Jump Diffusion models, to aid investors in making data-driven investment decisions."
authors = ["Jordi Corbilla <jordi.coll.corbilla@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JordiCorbilla/RiskOptima"
repository = "https://github.com/JordiCorbilla/RiskOptima"
keywords = [
    "portfolio", "risk", "optimization", "VaR", "CVaR", "backtesting", 
    "monte-carlo", "machine-learning", "random-forest", "linear-regression", 
    "gradient-boosting", "mean-variance", "black-litterman", "stochastic-volatility", 
    "option-pricing", "black-scholes", "heston-model", "merton-jump-diffusion", "correlation  matrix",
    "efficient-frontier", "financial-modeling", "quantitative-finance", "Hull-White", "Heston", "SABR",
    "credit-risk", "expected-loss", "PD", "LGD", "EAD", "credit-var", "rating-migration",
    "portfolio-sophistication", "drawdown-risk", "tail-risk", "risk-measures",
    "markov-regime", "hidden-markov-model", "market-regimes",
    "volatility", "realized-volatility", "implied-volatility", "ohlc-volatility", "ewma-volatility",
    "risk-attribution", "stress-testing", "option-book", "greeks", "scenario-analysis"
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.26.4"
pandas = ">=2.1.4"
scipy = ">=1.13.1"
statsmodels = ">=0.14.2"
yfinance = ">=0.2.54"
matplotlib = ">=3.8.4"
scikit-learn = ">=1.5.1"
xgboost = ">=2.1.3"
seaborn = ">=0.13.2"
squarify = ">=0.4.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.5"
mypy = ">=1.10"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
allow_redefinition = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



